--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,27 @@
   "version": 2,
   "builds": [
     {
+      "src": "/public/**",
+      "use": "@vercel/static"
+    },
+    {
       "src": "index.py",
-      "use": "@vercel/python",
-      "config": {
-        "includeFiles": "public/**"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "index.py"
+      "dest": "/index.py"
     }
   ],
   "crons": [
     {
-      "path": "/api/v1/cron/trigger_draws",
+      "path": "/api/v1/cron/draw_winner?event_id=1&secret=a1b2c3d4-e5f6-7890-a1b2-c3d4e5f67890",
       "schedule": "0 21 30 8 *"
     }
   ]
