--- a/vercel.json
+++ b/vercel.json
@@ -21,8 +21,8 @@
     { "src": "/roulette.html", "dest": "/public/roulette.html" },
     { "src": "/halloween", "dest": "/public/halloween.html" },
     { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/public/$1" },
-    { "src": "/api/(.*)", "dest": "/index.py" }
+    { "src": "/api/(.*)", "dest": "/index.py" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ],
   "crons": [
     {
