--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,9 @@ python-dotenv==1.0.1
 httpx==0.27.0
 aiohttp==3.9.5
 requests==2.32.3
+
+# --- Supabase V2 Dependencies ---
+pydantic>=2.0.0
 supabase[asyncio]>=2.0.0
+supabase-auth>=1.0.0
+gotrue>=1.0.0
