--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ aiohttp==3.9.5
 requests==2.32.3
 
 # --- Supabase V2 Dependencies ---
-pydantic>=2.5.0
 supabase[asyncio]>=2.0.0
-supabase-auth>=1.0.0
-gotrue>=1.0.0
+pydantic>=2.7.0  # <-- Явно требуем ОЧЕНЬ новую версию
+
+# Force Vercel to rebuild
 
 # Force Vercel to rebuild
