--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,7 @@
     { "src": "/checkpoint", "dest": "/public/checkpoint.html" },
     { "src": "/roulette.html", "dest": "/public/roulette.html" },
     { "src": "/halloween", "dest": "/public/halloween.html" },
+    { "src": "/auction.html", "dest": "/public/auction.html" }
     { "src": "/", "dest": "/public/index.html" },
     { "src": "/api/(.*)", "dest": "/index.py" },
     { "src": "/(.*)", "dest": "/public/$1" }
