--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,7 @@
     { "src": "/halloween", "dest": "/public/halloween.html" },
     { "src": "/auction.html", "dest": "/public/auction.html" },
     { "src": "/auction", "dest": "/public/auction.html" },
+    { "src": "/slay", "dest": "/public/slay.html" },
     { "src": "/shop", "dest": "/public/shop.html" },
     { "src": "/", "dest": "/public/index.html" },
     { "src": "/api/(.*)", "dest": "/index.py" },
