--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,7 @@
     { "src": "/auction", "dest": "/public/auction.html" },
     { "src": "/slay", "dest": "/public/slay.html" },
     { "src": "/shop", "dest": "/public/shop.html" },
+    { "src": "/advent", "dest": "/public/advent.html" },
     { "src": "/", "dest": "/public/index.html" },
     { "src": "/api/(.*)", "dest": "/index.py" },
     { "src": "/(.*)", "dest": "/public/$1" }
