--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,7 @@
     { "src": "/", "dest": "/public/index.html" },
     { "src": "/api/(.*)", "dest": "/index.py" },
     { "src": "/admin_raffles.html", "dest": "/public/admin_raffles.html" },
+    { "src": "/raffles", "dest": "/public/raffles.html" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ],
   "crons": [
