--- a/vercel.json
+++ b/vercel.json
@@ -38,8 +38,8 @@
   ],
   "crons": [
     {
-      "path": "/api/v1/cron/check_raffles",
-      "schedule": "*/10 * * * *"
+      "path": "/api/v1/cron/draw_winner?event_id=1&secret=a1b2c3d4-e5f6-7890-a1b2-c3d4e5f67890",
+      "schedule": "0 21 30 8 *"
     }
   ]
 }
