--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,7 @@
     { "src": "/shop", "dest": "/public/shop.html" },
     { "src": "/advent", "dest": "/public/advent.html" },
     { "src": "/cs", "dest": "/public/cs_roulette.html" },
+    { "src": "/stream", "dest": "/public/stream_overlay.html" },
     { "src": "/", "dest": "/public/index.html" },
     { "src": "/api/(.*)", "dest": "/index.py" },
     { "src": "/admin_raffles.html", "dest": "/public/admin_raffles.html" },
