--- a/vercel.json
+++ b/vercel.json
@@ -7,15 +7,13 @@
     },
     {
       "src": "index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxDuration": 30,
+        "memory": 1024
+      }
     }
   ],
-  "functions": {
-    "index.py": {
-      "maxDuration": 30,
-      "memory": 1024
-    }
-  },
   "routes": [
     { "src": "/public/(.*)", "dest": "/public/$1" },
     { "src": "/static/(.*)", "dest": "/public/static/$1" }, 
